# three-playground

./: .eslintrc.cjs  .prettierrc  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
.claude/agents/: rust-graphics-engineer.md  svelte-performance-expert.md  web-graphics-expert.md
scripts/: generate-categories.js  generate-thumbnails.js  raytracer.js
src/: app.css  app.d.ts  app.html
src/components/: Nav.svelte  Scene.svelte  Toggle.svelte
src/components/points/: billboard.svelte  pointclouds.svelte  shader.svelte
src/lib/: categories.js  index.js  theme.js
src/lib/playground/: index.ts  orbitControl.js  playground.ts  text.js  utils.js
src/lib/setup/: axesHelper.js  scene.js  types.d.ts
src/lib/wasm/: hello.js  hello_bg.wasm
src/lib/webgl/: math.js  scene.js  utils.js
src/routes/: +layout.svelte  +page.svelte
src/routes/batched-geometry/: +page.svelte
src/routes/blending/: +page.svelte
src/routes/camera-focus/: +page.svelte
src/routes/coord/: +page.svelte
src/routes/deoverlap/: +page.svelte
src/routes/extruded/: +page.svelte
src/routes/fan/: +page.svelte
src/routes/fps/: +page.svelte
src/routes/instancedmesh/: +page.svelte
src/routes/integer-attributes/: +page.svelte  fragment.glsl  vertex.glsl
src/routes/max-inscribed/: +page.svelte
src/setup/: axesHelper.js  scene.js  text.js
src/utils/: url.ts
static/js/: max-inscribed-circle.es5.min.js  max-inscribed-circle.es5.min.js.map
wasm-hello/: CHANGELOG.md  Cargo.toml  README.md  build.sh  dev.sh
wasm-hello/src/: lib.rs
(+36 files in other folders)
